@@ -1,6 +1,5 @@
 /*
- * Copyright (c) 2002-2025 Gargoyle Software Inc.
- * Copyright (c) 2005-2025 Xceptance Software Technologies GmbH
+ * Copyright (c) 2002-2026 Gargoyle Software Inc.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,7 +16,6 @@ package org.htmlunit;
 
 import static java.nio.charset.StandardCharsets.ISO_8859_1;
 import static java.nio.charset.StandardCharsets.UTF_8;
-import static org.junit.Assert.fail;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -25,10 +23,9 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
-import java.util.EnumSet;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -40,42 +37,25 @@ import java.util.Set;
 import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
 
-import javax.servlet.DispatcherType;
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.Servlet;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
-import org.eclipse.jetty.security.ConstraintMapping;
-import org.eclipse.jetty.security.ConstraintSecurityHandler;
-import org.eclipse.jetty.security.HashLoginService;
-import org.eclipse.jetty.server.Request;
 import org.eclipse.jetty.server.Server;
-import org.eclipse.jetty.server.handler.HandlerWrapper;
-import org.eclipse.jetty.util.security.Constraint;
-import org.eclipse.jetty.webapp.WebAppContext;
 import org.htmlunit.MockWebConnection.RawResponseData;
+import org.htmlunit.WebServerTestCase.SSLVariant;
 import org.htmlunit.html.HtmlElement;
-import org.htmlunit.html.HtmlPageTest;
 import org.htmlunit.javascript.JavaScriptEngine;
+import org.htmlunit.junit.TestCaseCorrector;
+import org.htmlunit.util.JettyServerUtils;
 import org.htmlunit.util.NameValuePair;
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.ComparisonFailure;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.openqa.selenium.Alert;
 import org.openqa.selenium.By;
 import org.openqa.selenium.Dimension;
@@ -91,7 +71,7 @@ import org.openqa.selenium.chrome.ChromeDriver;
 import org.openqa.selenium.chrome.ChromeDriverService;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.devtools.DevTools;
-import org.openqa.selenium.devtools.v133.emulation.Emulation;
+import org.openqa.selenium.devtools.v148.emulation.Emulation;
 import org.openqa.selenium.edge.EdgeDriver;
 import org.openqa.selenium.edge.EdgeDriverService;
 import org.openqa.selenium.edge.EdgeOptions;
@@ -106,35 +86,60 @@ import org.openqa.selenium.htmlunit.options.HtmlUnitDriverOptions;
 import org.openqa.selenium.htmlunit.options.HtmlUnitOption;
 import org.openqa.selenium.remote.UnreachableBrowserException;
 
+import jakarta.servlet.Servlet;
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.HttpServlet;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+
 /**
  * Base class for tests using WebDriver.
- *
+ * <p>
  * By default, this test runs with HtmlUnit, but this behavior can be changed by having a property file named
  * "{@code test.properties}" in the HtmlUnit root directory.
- * Sample:
+ * Sample (remove the part not matching your os):
  * <pre>
-   browsers=hu,ff,ie
-   chrome.bin=/path/to/chromedriver                     [Unix-like]
-   ff-esr.bin=/usr/bin/firefox                          [Unix-like]
-   ie.bin=C:\\path\\to\\32bit\\IEDriverServer.exe       [Windows]
-   edge.bin=C:\\path\\to\\msedgedriver.exe              [Windows]
-   autofix=true
+   browsers=hu,ff,chrome
+
+   ff.bin=/usr/bin/firefox                              [Unix]
+   ff-esr.bin=/usr/bin/firefox-esr                      [Unix]
+   geckodriver.bin=/usr/bin/driver/geckodriver          [Unix]
+   chrome.bin=/path/to/chromedriver                     [Unix]
+   edge.bin=/path/to/chromedriver                       [Unix]
+
+   geckodriver.bin=C:\\path\\to\\geckodriver.exe              [Windows]
+   ff.bin=C:\\path\\to\\Mozilla Firefox\\firefox.exe          [Windows]
+   ff-esr.bin=C:\\path\\to\\Mozilla Firefox ESR\\firefox.exe  [Windows]
+   chrome.bin=C:\\path\\to\\chromedriver.exe                  [Windows]
+   edge.bin=C:\\path\\to\\msedgedriver.exe                    [Windows]
+
+   autofix=false
    </pre>
+
  * The file could contain some properties:
  * <ul>
- *   <li>browsers: is a comma separated list contains any combination of "hu" (for HtmlUnit with all browser versions),
- *   "hu-ff", "hu-ff-esr", "ff", "chrome", which will be used to drive real browsers</li>
+ *   <li>browsers: is a comma separated list contains any combination of
+ *     <ul>
+ *       <li>hu (for HtmlUnit with all browser versions),</li>
+ *       <li>hu-ff,</li>
+ *       <li>hu-ff-esr,</li>
+ *       <li>hu-chrome,</li>
+ *       <li>hu-edge,</li>
+ *       <li>ff, (running test using real Firefox),</li>
+ *       <li>ff-esr, (running test using real Firefox ESR),</li>
+ *       <li>chrome (running test using real Chrome),</li>
+ *       <li>edge (running test using real Edge),</li>
+ *     </ul>
+ *   </li>
  *
  *   <li>chrome.bin (mandatory if it does not exist in the <i>path</i>): is the location of the ChromeDriver binary (see
- *   <a href="http://chromedriver.storage.googleapis.com/index.html">Chrome Driver downloads</a>)</li>
+ *   <a href="https://googlechromelabs.github.io/chrome-for-testing/last-known-good-versions-with-downloads.json">Chrome Driver downloads</a>)</li>
  *   <li>geckodriver.bin (mandatory if it does not exist in the <i>path</i>): is the location of the GeckoDriver binary
- *   (see <a href="https://firefox-source-docs.mozilla.org/testing/geckodriver/Usage.html">Gecko Driver Usage</a>)</li>
+ *   (see <a href="https://github.com/mozilla/geckodriver/releases">Gecko Driver Releases</a>)</li>
  *   <li>ff.bin (optional): is the location of the FF binary, in Windows use double back-slashes</li>
  *   <li>ff-esr.bin (optional): is the location of the FF binary, in Windows use double back-slashes</li>
- *   <li>ie.bin (mandatory if it does not exist in the <i>path</i>): is the location of the IEDriverServer binary (see
- *   <a href="http://selenium-release.storage.googleapis.com/index.html">IEDriverServer downloads</a>)</li>
  *   <li>edge.bin (mandatory if it does not exist in the <i>path</i>): is the location of the MicrosoftWebDriver binary
- *   (see <a href="http://go.microsoft.com/fwlink/?LinkId=619687">MicrosoftWebDriver downloads</a>)</li>
+ *   (see <a href="https://developer.microsoft.com/en-us/microsoft-edge/tools/webdriver/">Microsoft Edge WebDriver downloads</a>)</li>
  *   <li>autofix (optional): if {@code true}, try to automatically fix the real browser expectations,
  *   or add/remove {@code @NotYetImplemented} annotations, use with caution!</li>
  * </ul>
@@ -144,28 +149,29 @@ import org.openqa.selenium.remote.UnreachableBrowserException;
  * @author Ronald Brill
  * @author Frank Danek
  */
+@ExtendWith(TestCaseCorrector.class)
 public abstract class WebDriverTestCase extends WebTestCase {
 
     private static final String LOG_EX_FUNCTION =
             "  function logEx(e) {\n"
-            + "  let toStr = null;\n"
-            + "  if (toStr === null && e instanceof EvalError) { toStr = ''; }\n"
-            + "  if (toStr === null && e instanceof RangeError) { toStr = ''; }\n"
-            + "  if (toStr === null && e instanceof ReferenceError) { toStr = ''; }\n"
-            + "  if (toStr === null && e instanceof SyntaxError) { toStr = ''; }\n"
-            + "  if (toStr === null && e instanceof TypeError) { toStr = ''; }\n"
-            + "  if (toStr === null && e instanceof URIError) { toStr = ''; }\n"
-            + "  if (toStr === null && e instanceof AggregateError) { toStr = '/AggregateError'; }\n"
-            + "  if (toStr === null && typeof InternalError == 'function' "
+            + "    let toStr = null;\n"
+            + "    if (toStr === null && e instanceof EvalError) { toStr = ''; }\n"
+            + "    if (toStr === null && e instanceof RangeError) { toStr = ''; }\n"
+            + "    if (toStr === null && e instanceof ReferenceError) { toStr = ''; }\n"
+            + "    if (toStr === null && e instanceof SyntaxError) { toStr = ''; }\n"
+            + "    if (toStr === null && e instanceof TypeError) { toStr = ''; }\n"
+            + "    if (toStr === null && e instanceof URIError) { toStr = ''; }\n"
+            + "    if (toStr === null && e instanceof AggregateError) { toStr = '/AggregateError'; }\n"
+            + "    if (toStr === null && typeof InternalError == 'function' "
                         + "&& e instanceof InternalError) { toStr = '/InternalError'; }\n"
-            + "  if (toStr === null) {\n"
-            + "    let rx = /\\[object (.*)\\]/;\n"
-            + "    toStr = Object.prototype.toString.call(e);\n"
-            + "    let match = rx.exec(toStr);\n"
-            + "    if (match != null) { toStr = '/' + match[1]; }\n"
-            + "  }"
-            + "  log(e.name + toStr);\n"
-            + "}\n";
+            + "    if (toStr === null) {\n"
+            + "      let rx = /\\[object (.*)\\]/;\n"
+            + "      toStr = Object.prototype.toString.call(e);\n"
+            + "      let match = rx.exec(toStr);\n"
+            + "      if (match != null) { toStr = '/' + match[1]; }\n"
+            + "    }"
+            + "    log(e.name + toStr);\n"
+            + "  }\n";
 
     /**
      * Function used in many tests.
@@ -193,7 +199,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * Function used in many tests.
      */
     public static final String LOG_WINDOW_NAME_FUNCTION =
-            "  function log(msg) { window.top.name += msg + '\\u00a7'; }\n  window.top.name = '';"
+            "  function log(msg) { window.top.name += msg + '\\u00a7'; }\n"
+            + "  window.top.name = '';"
             + LOG_EX_FUNCTION;
 
     /**
@@ -224,16 +231,12 @@ public abstract class WebDriverTestCase extends WebTestCase {
     /**
      * All browsers supported.
      */
-    private static List<BrowserVersion> ALL_BROWSERS_ = Collections.unmodifiableList(
-            Arrays.asList(BrowserVersion.CHROME,
-                    BrowserVersion.EDGE,
-                    BrowserVersion.FIREFOX,
-                    BrowserVersion.FIREFOX_ESR));
+    private static final List<BrowserVersion> ALL_BROWSERS_ = List.of(BrowserVersion.CHROME, BrowserVersion.EDGE, BrowserVersion.FIREFOX, BrowserVersion.FIREFOX_ESR);
 
     /**
      * Browsers which run by default.
      */
-    private static BrowserVersion[] DEFAULT_RUNNING_BROWSERS_ =
+    private static final BrowserVersion[] DEFAULT_RUNNING_BROWSERS_ =
         {BrowserVersion.CHROME,
             BrowserVersion.EDGE,
             BrowserVersion.FIREFOX,
@@ -268,7 +271,6 @@ public abstract class WebDriverTestCase extends WebTestCase {
     private static final Executor EXECUTOR_POOL = Executors.newFixedThreadPool(4);
 
     private boolean useRealBrowser_;
-    private Boolean useStandards_;
 
     /**
      * The HtmlUnitDriver.
@@ -283,6 +285,9 @@ public abstract class WebDriverTestCase extends WebTestCase {
         return false;
     }
 
+    /**
+     * @return the browser properties (and initializes them lazy)
+     */
     public static Set<String> getBrowsersProperties() {
         if (BROWSERS_PROPERTIES_ == null) {
             try {
@@ -394,7 +399,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * Closes the drivers.
      * @throws Exception If an error occurs
      */
-    @AfterClass
+    @AfterAll
     public static void shutDownAll() throws Exception {
         for (final WebDriver driver : WEB_DRIVERS_.values()) {
             driver.quit();
@@ -459,9 +464,9 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @throws Exception if it fails
      */
     protected static void assertWebServersStopped() throws Exception {
-        Assert.assertNull(STATIC_SERVER_STARTER_, STATIC_SERVER_);
-        Assert.assertNull(STATIC_SERVER2_STARTER_, STATIC_SERVER2_);
-        Assert.assertNull(STATIC_SERVER3_STARTER_, STATIC_SERVER3_);
+        Assertions.assertNull(STATIC_SERVER_, STATIC_SERVER_STARTER_);
+        Assertions.assertNull(STATIC_SERVER2_, STATIC_SERVER2_STARTER_);
+        Assertions.assertNull(STATIC_SERVER3_, STATIC_SERVER3_STARTER_);
     }
 
     /**
@@ -469,30 +474,22 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @throws Exception if it fails
      */
     protected static void stopWebServers() throws Exception {
-        if (STATIC_SERVER_ != null) {
-            STATIC_SERVER_.stop();
-            STATIC_SERVER_.destroy();
+        JettyServerUtils.stopServer(STATIC_SERVER_);
             STATIC_SERVER_ = null;
-        }
 
-        if (STATIC_SERVER2_ != null) {
-            STATIC_SERVER2_.stop();
-            STATIC_SERVER2_.destroy();
+        JettyServerUtils.stopServer(STATIC_SERVER2_);
             STATIC_SERVER2_ = null;
-        }
 
-        if (STATIC_SERVER3_ != null) {
-            STATIC_SERVER3_.stop();
-            STATIC_SERVER3_.destroy();
+        JettyServerUtils.stopServer(STATIC_SERVER3_);
             STATIC_SERVER3_ = null;
-        }
+
         LAST_TEST_UsesMockWebConnection_ = null;
     }
 
     /**
      * @return whether to use real browser or not.
      */
-    protected boolean useRealBrowser() {
+    public boolean useRealBrowser() {
         return useRealBrowser_;
     }
 
@@ -502,14 +499,6 @@ public abstract class WebDriverTestCase extends WebTestCase {
      */
     public void setUseRealBrowser(final boolean useRealBrowser) {
         useRealBrowser_ = useRealBrowser;
-    }
-
-    /**
-     * Sets whether to use {@code Standards Mode} or not.
-     * @param useStandards whether to use {@code Standards Mode} or not
-     */
-    public void setUseStandards(final boolean useStandards) {
-        useStandards_ = useStandards;
     }
 
     /**
@@ -536,6 +525,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
                 // options.setCapability("webSocketUrl", true);
 
                 options.addArguments("--lang=" + locale);
+                // https://stackoverflow.com/questions/11289597/webdriver-how-to-specify-preferred-languages-for-chrome
+                options.setExperimentalOption("prefs", Map.of("intl.accept_languages", locale));
                 options.addArguments("--remote-allow-origins=*");
 
                 // seems to be not required for edge
@@ -572,6 +563,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
                 // options.setCapability("webSocketUrl", true);
 
                 options.addArguments("--lang=" + locale);
+                // https://stackoverflow.com/questions/11289597/webdriver-how-to-specify-preferred-languages-for-chrome
+                options.setExperimentalOption("prefs", Map.of("intl.accept_languages", locale));
                 options.addArguments("--remote-allow-origins=*");
                 options.addArguments("--disable-search-engine-choice-screen");
                 // see https://www.selenium.dev/blog/2024/chrome-browser-woes/
@@ -653,69 +646,29 @@ public abstract class WebDriverTestCase extends WebTestCase {
             stopWebServers();
         }
 
+        // The mock connection servlet call sit under both servers, so long as tests
+        // keep the URLs distinct.
+        final Map<String, Class<? extends Servlet>> servlets = new HashMap<>();
+        servlets.put("/*", MockWebConnectionServlet.class);
+
         LAST_TEST_UsesMockWebConnection_ = Boolean.TRUE;
+
         if (STATIC_SERVER_ == null) {
-            final Server server = new Server(PORT);
 
-            final WebAppContext context = new WebAppContext();
-            context.setContextPath("/");
-            context.setResourceBase("./");
-
-            if (isBasicAuthentication()) {
-                final Constraint constraint = new Constraint();
-                constraint.setName(Constraint.__BASIC_AUTH);
-                constraint.setRoles(new String[]{"user"});
-                constraint.setAuthenticate(true);
-
-                final ConstraintMapping constraintMapping = new ConstraintMapping();
-                constraintMapping.setConstraint(constraint);
-                constraintMapping.setPathSpec("/*");
-
-                final ConstraintSecurityHandler handler = (ConstraintSecurityHandler) context.getSecurityHandler();
-                handler.setLoginService(new HashLoginService("MyRealm", "./src/test-hu/resources/realm.properties"));
-                handler.setConstraintMappings(new ConstraintMapping[]{constraintMapping});
-            }
-
-            context.addServlet(MockWebConnectionServlet.class, "/*");
-            if (serverCharset != null) {
-                AsciiEncodingFilter.CHARSET_ = serverCharset;
-                context.addFilter(AsciiEncodingFilter.class, "/*",
-                        EnumSet.of(DispatcherType.INCLUDE, DispatcherType.REQUEST));
-            }
-            server.setHandler(context);
-            WebServerTestCase.tryStart(PORT, server);
-
+            final Server server = JettyServerUtils.startWebServer(PORT, "./", servlets, serverCharset, isBasicAuthentication(), SSLVariant.NONE);
             STATIC_SERVER_STARTER_ = ExceptionUtils.getStackTrace(new Throwable("StaticServerStarter"));
             STATIC_SERVER_ = server;
         }
         MockWebConnectionServlet.MockConnection_ = mockConnection;
 
         if (STATIC_SERVER2_ == null && needThreeConnections()) {
-            final Server server2 = new Server(PORT2);
-            final WebAppContext context2 = new WebAppContext();
-            context2.setContextPath("/");
-            context2.setResourceBase("./");
-            context2.addServlet(MockWebConnectionServlet.class, "/*");
-            server2.setHandler(context2);
-            WebServerTestCase.tryStart(PORT2, server2);
-
+            final Server server2 = JettyServerUtils.startWebServer(PORT2, "./", servlets, null, false, SSLVariant.NONE);
             STATIC_SERVER2_STARTER_ = ExceptionUtils.getStackTrace(new Throwable("StaticServer2Starter"));
             STATIC_SERVER2_ = server2;
 
-            final Server server3 = new Server(PORT3);
-            final WebAppContext context3 = new WebAppContext();
-            context3.setContextPath("/");
-            context3.setResourceBase("./");
-            context3.addServlet(MockWebConnectionServlet.class, "/*");
-            server3.setHandler(context3);
-            WebServerTestCase.tryStart(PORT3, server3);
-
+            final Server server3 = JettyServerUtils.startWebServer(PORT3, "./", servlets, null, false, SSLVariant.NONE);
             STATIC_SERVER3_STARTER_ = ExceptionUtils.getStackTrace(new Throwable("StaticServer3Starter"));
             STATIC_SERVER3_ = server3;
-            /*
-             * The mock connection servlet call sit under both servers, so long as tests
-             * keep the URLs distinct.
-             */
         }
     }
 
@@ -734,13 +687,15 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * <p><b>Don't forget to stop the returned HttpServer after the test</b>
      *
      * @param resourceBase the base of resources for the default context
-     * @param classpath additional classpath entries to add (may be null)
      * @param servlets map of {String, Class} pairs: String is the path spec, while class is the class
      * @throws Exception if the test fails
      */
-    protected static void startWebServer(final String resourceBase, final String[] classpath,
-            final Map<String, Class<? extends Servlet>> servlets) throws Exception {
-        startWebServer(resourceBase, classpath, servlets, null);
+    protected static void startWebServer(final String resourceBase, final Map<String, Class<? extends Servlet>> servlets) throws Exception {
+        stopWebServers();
+        LAST_TEST_UsesMockWebConnection_ = Boolean.FALSE;
+
+        STATIC_SERVER_STARTER_ = ExceptionUtils.getStackTrace(new Throwable("StaticServerStarter"));
+        STATIC_SERVER_ = JettyServerUtils.startWebServer(PORT, resourceBase, servlets, null, false, SSLVariant.NONE);
     }
 
     /**
@@ -749,38 +704,15 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * <p><b>Don't forget to stop the returned HttpServer after the test</b>
      *
      * @param resourceBase the base of resources for the default context
-     * @param classpath additional classpath entries to add (may be null)
      * @param servlets map of {String, Class} pairs: String is the path spec, while class is the class
      * @throws Exception if the test fails
      */
-    protected static void startWebServer2(final String resourceBase, final String[] classpath,
-            final Map<String, Class<? extends Servlet>> servlets) throws Exception {
-
+    protected static void startWebServer2(final String resourceBase, final Map<String, Class<? extends Servlet>> servlets) throws Exception {
         if (STATIC_SERVER2_ != null) {
-            STATIC_SERVER2_.stop();
+            JettyServerUtils.stopServer(STATIC_SERVER2_);
         }
         STATIC_SERVER2_STARTER_ = ExceptionUtils.getStackTrace(new Throwable("StaticServer2Starter"));
-        STATIC_SERVER2_ = WebServerTestCase.createWebServer(PORT2, resourceBase, classpath, servlets, null);
-    }
-
-    /**
-     * Starts the web server on the default {@link #PORT}.
-     * The given resourceBase is used to be the ROOT directory that serves the default context.
-     * <p><b>Don't forget to stop the returned Server after the test</b>
-     *
-     * @param resourceBase the base of resources for the default context
-     * @param classpath additional classpath entries to add (may be null)
-     * @param servlets map of {String, Class} pairs: String is the path spec, while class is the class
-     * @param handler wrapper for handler (can be null)
-     * @throws Exception if the test fails
-     */
-    protected static void startWebServer(final String resourceBase, final String[] classpath,
-            final Map<String, Class<? extends Servlet>> servlets, final HandlerWrapper handler) throws Exception {
-        stopWebServers();
-        LAST_TEST_UsesMockWebConnection_ = Boolean.FALSE;
-
-        STATIC_SERVER_STARTER_ = ExceptionUtils.getStackTrace(new Throwable("StaticServerStarter"));
-        STATIC_SERVER_ = WebServerTestCase.createWebServer(PORT, resourceBase, classpath, servlets, handler);
+        STATIC_SERVER2_ = JettyServerUtils.startWebServer(PORT2, resourceBase, servlets, null, false, SSLVariant.NONE);
     }
 
     /**
@@ -863,7 +795,9 @@ public abstract class WebDriverTestCase extends WebTestCase {
             }
             final URL requestedUrl = new URL(url);
             final WebRequest webRequest = new WebRequest(requestedUrl);
-            webRequest.setHttpMethod(HttpMethod.valueOf(request.getMethod()));
+
+            final String method = request.getMethod().toUpperCase(Locale.ROOT);
+            webRequest.setHttpMethod(HttpMethod.valueOf(method));
 
             // copy headers
             for (final Enumeration<String> en = request.getHeaderNames(); en.hasMoreElements();) {
@@ -968,18 +902,9 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @return the web driver
      * @throws Exception if something goes wrong
      */
-    protected final WebDriver loadPage2(String html, final URL url,
+    protected final WebDriver loadPage2(final String html, final URL url,
             final String contentType, final Charset charset, final Charset serverCharset) throws Exception {
-        if (useStandards_ != null) {
-            if (html.startsWith(HtmlPageTest.STANDARDS_MODE_PREFIX_)) {
-                fail("HTML must not be prefixed with Standards Mode.");
-            }
-            if (useStandards_) {
-                html = HtmlPageTest.STANDARDS_MODE_PREFIX_ + html;
-            }
-        }
         getMockWebConnection().setResponse(url, html, contentType, charset);
-
         return loadPage2(url, serverCharset);
     }
 
@@ -1052,9 +977,9 @@ public abstract class WebDriverTestCase extends WebTestCase {
         getMockWebConnection().setResponse(url, html);
         MockWebConnectionServlet.MockConnection_ = getMockWebConnection();
 
-        startWebServer("./", null, servlets);
+        startWebServer("./", servlets);
         if (servlets2 != null) {
-            startWebServer2("./", null, servlets2);
+            startWebServer2("./", servlets2);
         }
 
         WebDriver driver = getWebDriver();
@@ -1112,16 +1037,16 @@ public abstract class WebDriverTestCase extends WebTestCase {
         return verifyTitle2(driver, expectedAlerts);
     }
 
-    protected final WebDriver verifyTitle2(final long maxWaitTime, final WebDriver driver,
+    protected final WebDriver verifyTitle2(final Duration maxWaitTime, final WebDriver driver,
             final String... expectedAlerts) throws Exception {
 
         final StringBuilder expected = new StringBuilder();
-        for (int i = 0; i < expectedAlerts.length; i++) {
-            expected.append(expectedAlerts[i]).append('\u00A7');
+        for (String expectedAlert : expectedAlerts) {
+            expected.append(expectedAlert).append('\u00A7');
         }
         final String expectedTitle = expected.toString();
 
-        final long maxWait = System.currentTimeMillis() + maxWaitTime;
+        final long maxWait = System.currentTimeMillis() + maxWaitTime.toMillis();
 
         while (System.currentTimeMillis() < maxWait) {
             try {
@@ -1146,8 +1071,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
         }
 
         final StringBuilder expected = new StringBuilder();
-        for (int i = 0; i < expectedAlerts.length; i++) {
-            expected.append(expectedAlerts[i]).append('\u00A7');
+        for (String expectedAlert : expectedAlerts) {
+            expected.append(expectedAlert).append('\u00A7');
         }
 
         final String title = driver.getTitle();
@@ -1195,8 +1120,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
         }
 
         final StringBuilder expected = new StringBuilder();
-        for (int i = 0; i < expectedAlerts.length; i++) {
-            expected.append(expectedAlerts[i]).append('\u00A7');
+        for (String expectedAlert : expectedAlerts) {
+            expected.append(expectedAlert).append('\u00A7');
         }
         verify(() -> textArea.getDomProperty("value"), expected.toString());
 
@@ -1218,9 +1143,9 @@ public abstract class WebDriverTestCase extends WebTestCase {
         return driver;
     }
 
-    protected final WebDriver verifyWindowName2(final long maxWaitTime, final WebDriver driver,
+    protected final WebDriver verifyWindowName2(final Duration maxWaitTime, final WebDriver driver,
             final String... expectedAlerts) throws Exception {
-        final long maxWait = System.currentTimeMillis() + maxWaitTime;
+        final long maxWait = System.currentTimeMillis() + maxWaitTime.toMillis();
 
         while (System.currentTimeMillis() < maxWait) {
             try {
@@ -1237,8 +1162,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
     protected final WebDriver verifyWindowName2(final WebDriver driver,
             final String... expectedAlerts) throws Exception {
         final StringBuilder expected = new StringBuilder();
-        for (int i = 0; i < expectedAlerts.length; i++) {
-            expected.append(expectedAlerts[i]).append('\u00A7');
+        for (String expectedAlert : expectedAlerts) {
+            expected.append(expectedAlert).append('\u00A7');
         }
 
         return verifyJsVariable(driver, "window.top.name", expected.toString());
@@ -1247,8 +1172,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
     protected final WebDriver verifySessionStorage2(final WebDriver driver,
             final String... expectedAlerts) throws Exception {
         final StringBuilder expected = new StringBuilder();
-        for (int i = 0; i < expectedAlerts.length; i++) {
-            expected.append(expectedAlerts[i]).append('\u00A7');
+        for (String expectedAlert : expectedAlerts) {
+            expected.append(expectedAlert).append('\u00A7');
         }
 
         return verifyJsVariable(driver, "sessionStorage.getItem('Log')", expected.toString());
@@ -1263,7 +1188,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @return the web driver
      * @throws Exception if something goes wrong
      */
-    protected final WebDriver loadPageWithAlerts2(final String html, final long maxWaitTime) throws Exception {
+    protected final WebDriver loadPageWithAlerts2(final String html, final Duration maxWaitTime) throws Exception {
         return loadPageWithAlerts2(html, URL_FIRST, maxWaitTime);
     }
 
@@ -1286,7 +1211,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @return the web driver
      * @throws Exception if something goes wrong
      */
-    protected final WebDriver loadPageWithAlerts2(final String html, final URL url, final long maxWaitTime)
+    protected final WebDriver loadPageWithAlerts2(final String html, final URL url, final Duration maxWaitTime)
             throws Exception {
         final WebDriver driver = loadPage2(html, url);
 
@@ -1312,7 +1237,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @param expected the expected alerts
      * @throws Exception in case of failure
      */
-    protected void verifyAlerts(final long maxWaitTime, final WebDriver driver, final String... expected)
+    protected void verifyAlerts(final Duration maxWaitTime, final WebDriver driver, final String... expected)
             throws Exception {
         final List<String> actualAlerts = getCollectedAlerts(maxWaitTime, driver, expected.length);
 
@@ -1320,14 +1245,13 @@ public abstract class WebDriverTestCase extends WebTestCase {
 
         if (!useRealBrowser()) {
             // check if we have data-image Url
-            for (int i = 0; i < expected.length; i++) {
-                if (expected[i].startsWith("data:image/png;base64,")) {
+            for (String s : expected) {
+                if (s.startsWith("data:image/png;base64,")) {
                     // we have to compare element by element
                     for (int j = 0; j < expected.length; j++) {
                         if (expected[j].startsWith("data:image/png;base64,")) {
                             compareImages(expected[j], actualAlerts.get(j));
-                        }
-                        else {
+                        } else {
                             assertEquals(expected[j], actualAlerts.get(j));
                         }
                     }
@@ -1360,7 +1284,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @return the web driver
      * @throws Exception if something goes wrong
      */
-    protected final WebDriver loadPageWithAlerts2(final String html, final URL url, final long maxWaitTime,
+    protected final WebDriver loadPageWithAlerts2(final String html, final URL url, final Duration maxWaitTime,
             final Map<String, Class<? extends Servlet>> servlets) throws Exception {
 
         expandExpectedAlertsVariables(URL_FIRST);
@@ -1389,7 +1313,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @return the web driver
      * @throws Exception if something goes wrong
      */
-    protected final WebDriver loadPageWithAlerts2(final URL url, final long maxWaitTime) throws Exception {
+    protected final WebDriver loadPageWithAlerts2(final URL url, final Duration maxWaitTime) throws Exception {
         startWebServer(getMockWebConnection(), null);
 
         final WebDriver driver = getWebDriver();
@@ -1431,11 +1355,11 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @return the collected alerts
      * @throws Exception in case of problem
      */
-    protected List<String> getCollectedAlerts(final long maxWaitTime, final WebDriver driver, final int alertsLength)
-            throws Exception {
+    protected List<String> getCollectedAlerts(final Duration maxWaitTime,
+            final WebDriver driver, final int alertsLength) throws Exception {
         final List<String> collectedAlerts = new ArrayList<>();
 
-        long maxWait = System.currentTimeMillis() + maxWaitTime;
+        long maxWait = System.currentTimeMillis() + maxWaitTime.toMillis();
 
         while (collectedAlerts.size() < alertsLength && System.currentTimeMillis() < maxWait) {
             try {
@@ -1464,8 +1388,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @throws Exception if an error occurs
      */
     protected HtmlElement toHtmlElement(final WebElement webElement) throws Exception {
-        //return (HtmlElement) ((HtmlUnitWebElement) webElement).getElement();
-        throw new RuntimeException("Reactivate commented-out code");
+        return (HtmlElement) ((HtmlUnitWebElement) webElement).getElement();
     }
 
     /**
@@ -1506,21 +1429,22 @@ public abstract class WebDriverTestCase extends WebTestCase {
         // check for duplicates
         if (realBrowserNyiExpectation != null) {
             if (realNyiExpectation != null) {
-                Assert.assertNotEquals("Duplicate NYI Expectation for Browser " + browserVersion.getNickname(),
-                        realBrowserNyiExpectation, realNyiExpectation);
+                Assertions.assertNotEquals(realBrowserNyiExpectation, realNyiExpectation,
+                        "Duplicate NYI Expectation for Browser " + browserVersion.getNickname());
             }
 
             if (browserExpectation == null) {
                 if (expectation != null) {
-                    Assert.assertNotEquals("NYI Expectation matches the expected "
-                            + "result for Browser " + browserVersion.getNickname(),
-                            realBrowserNyiExpectation, expectation);
+                    Assertions.assertNotEquals(realBrowserNyiExpectation, expectation,
+                            "NYI Expectation matches the expected "
+                                    + "result for Browser " + browserVersion.getNickname());
                 }
             }
             else {
-                Assert.assertNotEquals("NYI Expectation matches the expected "
-                        + "browser specific result for Browser " + browserVersion.getNickname(),
-                        realBrowserNyiExpectation, browserExpectation);
+                Assertions.assertNotEquals(realBrowserNyiExpectation, browserExpectation,
+                        "NYI Expectation matches the expected "
+                                + "browser specific result for Browser "
+                                + browserVersion.getNickname());
             }
 
             return realBrowserNyiExpectation;
@@ -1529,24 +1453,25 @@ public abstract class WebDriverTestCase extends WebTestCase {
         if (realNyiExpectation != null) {
             if (browserExpectation == null) {
                 if (expectation != null) {
-                    Assert.assertNotEquals("NYI Expectation matches the expected "
-                            + "result for Browser " + browserVersion.getNickname(),
-                            realNyiExpectation, expectation);
+                    Assertions.assertNotEquals(realNyiExpectation, expectation,
+                            "NYI Expectation matches the expected "
+                                    + "result for Browser " + browserVersion.getNickname());
                 }
             }
             else {
-                Assert.assertNotEquals("NYI Expectation matches the expected "
-                        + "browser specific result for Browser " + browserVersion.getNickname(),
-                        realNyiExpectation, browserExpectation);
+                Assertions.assertNotEquals(realNyiExpectation, browserExpectation,
+                            "NYI Expectation matches the expected "
+                                    + "browser specific result for Browser "
+                                    + browserVersion.getNickname());
             }
             return realNyiExpectation;
         }
 
         if (browserExpectation != null) {
             if (expectation != null) {
-                Assert.assertNotEquals("Browser specific NYI Expectation matches the expected "
-                        + "result for Browser " + browserVersion.getNickname(),
-                        browserExpectation, expectation);
+                Assertions.assertNotEquals(browserExpectation, expectation,
+                            "Browser specific NYI Expectation matches the expected "
+                                    + "result for Browser " + browserVersion.getNickname());
             }
             return browserExpectation;
         }
@@ -1559,8 +1484,8 @@ public abstract class WebDriverTestCase extends WebTestCase {
         }
 
         final File file = new File(url.toURI());
-        String content = FileUtils.readFileToString(file, UTF_8);
-        content = StringUtils.replace(content, "\r\n", "\n");
+        final String content = FileUtils.readFileToString(file, UTF_8)
+                                        .replace("\r\n", "\n");
         return content;
     }
 
@@ -1569,7 +1494,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * This should be always 0, if {@link #isWebClientCached()} is {@code false}.
      * @throws InterruptedException in case of problems
      */
-    @Before
+    @BeforeEach
     public void beforeTest() throws InterruptedException {
         if (!isWebClientCached()) {
             if (!getJavaScriptThreads().isEmpty()) {
@@ -1586,7 +1511,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @throws Exception in case of failure
      */
     protected void assertTitle(final WebDriver webdriver, final String expected) throws Exception {
-        final long maxWait = System.currentTimeMillis() + DEFAULT_WAIT_TIME;
+        final long maxWait = System.currentTimeMillis() + DEFAULT_WAIT_TIME.toMillis();
 
         while (true) {
             final String title = webdriver.getTitle();
@@ -1594,7 +1519,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
                 assertEquals(expected, title);
                 return;
             }
-            catch (final ComparisonFailure e) {
+            catch (final org.opentest4j.AssertionFailedError e) {
                 if (expected.length() <= title.length()
                         || System.currentTimeMillis() > maxWait) {
                     throw e;
@@ -1608,7 +1533,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * Release resources but DON'T close the browser if we are running with a real browser.
      * Note that HtmlUnitDriver is not cached by default, but that can be configured by {@link #isWebClientCached()}.
      */
-    @After
+    @AfterEach
     @Override
     public void releaseResources() {
         final List<String> unhandledAlerts = new ArrayList<>();
@@ -1661,7 +1586,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
                         // close all windows except the current one
                         handles.remove(currentWindow);
 
-                        if (handles.size() > 0) {
+                        if (!handles.isEmpty()) {
                             for (final String handle : handles) {
                                 try {
                                     driver.switchTo().window(handle);
@@ -1712,8 +1637,7 @@ public abstract class WebDriverTestCase extends WebTestCase {
      * @see #toHtmlElement(WebElement)
      */
     protected WebWindow getWebWindow() {
-        //return webDriver_.getCurrentWindow().getWebWindow();
-        throw new RuntimeException("Reactivate commented-out code");
+        return webDriver_.getCurrentWindow().getWebWindow();
     }
 
     /**
@@ -1741,41 +1665,6 @@ public abstract class WebDriverTestCase extends WebTestCase {
     }
 
     protected WebClient getWebClient() {
-        //return webDriver_.getWebClient();
-        throw new RuntimeException("Reactivate commented-out code");
-    }
-
-    /**
-     * Needed as Jetty starting from 9.4.4 expects UTF-8 encoding by default.
-     */
-    public static class AsciiEncodingFilter implements Filter {
-
-        private static Charset CHARSET_;
-
-        /**
-         * {@inheritDoc}
-         */
-        @Override
-        public void init(final FilterConfig filterConfig) throws ServletException {
-        }
-
-        /**
-         * {@inheritDoc}
-         */
-        @Override
-        public void doFilter(final ServletRequest request, final ServletResponse response, final FilterChain chain)
-                throws IOException, ServletException {
-            if (request instanceof Request) {
-                ((Request) request).setQueryEncoding(CHARSET_.name());
-            }
-            chain.doFilter(request, response);
-        }
-
-        /**
-         * {@inheritDoc}
-         */
-        @Override
-        public void destroy() {
-        }
+        return webDriver_.getWebClient();
     }
 }
